# PyTxT

./: .env.example  .gitignore  CLAUDE.md  Makefile  PyTxT-codebase-tour.html  PyTxT-phase-2-checkpoint.html  PyTxT-project-plan.html  PyTxT-roadmap.html  README.md  orientation.md  pyproject.toml
.claude/: settings.json
docker/: Dockerfile  docker-compose.host.yml  docker-compose.yml
docs/: PyTxT-overview.md  PyTxT-roadmap.html  bpm_prefixes.txt  orientation.md  phase-2-m1-controlroom-validation.md  phase-3-dod-validation.md  phase-4-controlroom-checklist.md  phase-4-injection-notes.md
pytxt/: __main__.py  composition.py
pytxt/api/: README.md  server.py  ws_bridge.py
pytxt/ca_client/: README.md  bpm_reader.py  corrector_writer.py  injection_trigger.py  synthetic_corrector_writer.py  synthetic_injection_trigger.py  synthetic_reader.py
pytxt/config/: README.md  bpm_prefixes.py  bpm_prefixes.txt  corrector_channels.py  hcm_channels.txt  settings.py  vcm_channels.txt
pytxt/domain/: README.md  analysis.py  correctors.py  first_turn_extract.py  injection.py  injection_turn.py  reference.py  response_matrix.py  threading.py  types.py
pytxt/frontend/: README.md  correctors.html  diagnostics.html  index.html  injection.html  threading.html  trajectory.html
pytxt/handlers/: README.md  acquire.py  ping.py  reference.py  threading.py
pytxt/ioc/: README.md  pvs.py  server.py
pytxt/state/: README.md  app_state.py
scripts/: probe_bpm.py
tests/: conftest.py
tests/e2e/: analysis.spec.js  correctors.spec.js  dashboard.spec.js  injection.spec.js  package-lock.json  package.json  ping.spec.js  playwright.config.js  reference.spec.js  shell.spec.js  smoke.spec.js  tbt.spec.js  threading.spec.js  trajectory.spec.js
tests/fixtures/: fake_bpm_ioc.py  fake_injection_ioc.py
tests/integration/: test_acquire_active.py  test_acquire_all_fail.py  test_acquire_concurrent_ca.py  test_acquire_partial_fail.py  test_acquire_scale.py  test_acquire_via_rest.py  test_bpm_reader.py  test_bpm_reader_scale.py  test_fake_bpm_ioc.py  test_health_endpoint.py  test_inject_trigger.py  test_inject_via_rest.py  test_ioc_lifecycle.py  test_parity.py  test_ping_via_ca.py  test_ping_via_rest.py  test_reference_load_save.py  test_reference_path_safety_rest.py  test_reference_promote_clear.py  test_reference_upload_download.py  test_result_raw_endpoint.py  test_result_ref_raw.py  test_state_endpoint.py  test_step_cm_via_rest.py  test_thread_loop.py  test_ws_bridge.py
tests/unit/: test_analysis.py  test_app_state.py  test_bpm_prefixes_loader.py  test_cmd_acquire_putter.py  test_cmd_load_save_putters.py  test_cmd_reference_putters.py  test_composition.py  test_corrector_channels.py  test_correctors.py  test_domain_types.py  test_first_turn_extract.py  test_handlers_acquire.py  test_handlers_inject.py  test_handlers_ping.py  test_handlers_reference.py  test_handlers_reference_load_save.py  test_handlers_step_cm.py  test_injection_domain.py  test_injection_turn.py  test_reference_align.py  test_reference_canonicalize.py  test_reference_diff.py  (+10 more)
tools/: gen_corrector_channels.py  gen_synthetic_response_matrix.py
(+43 files in other folders)
