[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytxt"
version = "0.1.0"
description = "Turn-by-turn beam analysis service for the ALS"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kirk Iliev" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "caproto>=1.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
pytxt = "pytxt.__main__:run"

[tool.setuptools.packages.find]
include = ["pytxt*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pytxt = ["frontend/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
