[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytxt"
version = "0.1.0"
description = "Turn-by-turn beam analysis service for the ALS"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kirk Iliev" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "caproto>=1.1,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.4,<1.0",
    "websockets>=12.0,<16.0",
]

[project.scripts]
pytxt = "pytxt.__main__:run"

[tool.setuptools.packages.find]
include = ["pytxt*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pytxt = ["frontend/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
